# fossil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fossil-predevelopment-docs.md  pyproject.toml
.github/: FUNDING.yml  GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LANGUAGE_SUPPORT.md  PREDEVELOPMENT.md
scripts/: publish.sh
src/fossil/: __init__.py  __main__.py  analyzers.py  cache.py  cli.py  config_manager.py  engine.py  git_miner.py  models.py  patterns.py  render.py  repo.py  scoring.py
tests/: conftest.py  test_analyzers.py  test_cache.py  test_commands.py  test_config.py  test_explain.py  test_git_miner.py  test_patterns_scoring.py  test_repo.py  test_scan.py
