[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fossil-code"
version = "0.2.0"
description = "Dead-code forensics CLI — find dead code, understand why it died, and safely delete it."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "fossil contributors" }]
keywords = [
    "dead-code",
    "static-analysis",
    "git",
    "cli",
    "forensics",
    "code-quality",
    "refactoring",
    "cleanup",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
typer = ["typer>=0.12"]
gitpython = ["GitPython>=3.1"]
llm = ["litellm>=1.0"]
github = ["PyGithub>=2.0"]
gitlab = ["python-gitlab>=4.0"]
all = [
    "typer>=0.12",
    "GitPython>=3.1",
    "litellm>=1.0",
    "PyGithub>=2.0",
    "python-gitlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/iamvvek/fossil"
Documentation = "https://github.com/iamvvek/fossil#readme"
Repository = "https://github.com/iamvvek/fossil"
Issues = "https://github.com/iamvvek/fossil/issues"
Changelog = "https://github.com/iamvvek/fossil/blob/main/CHANGELOG.md"

[project.scripts]
fossil = "fossil.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fossil = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fossil"]

[tool.coverage.run]
source = ["fossil"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
